src/app/component/home/home.css
*{
    --primary-color: #1ABC9C;
}
header {
    background-color: var(--primary-color);
    min-height: 540px;
}
fa-icon {
    position: relative;
}
fa-icon::before{
    content: '';
    background-color: #fff !important;
    height: 4px;
    width: 80px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: -95px;
    z-index: 10;
}
fa-icon::after{
    content: '';
    background-color: #fff !important;
    height: 4px;
    width: 80px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: -95px;
    z-index: 10;
}

